# med-lembre-back

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
api/entidades/: __init__.py
api/entidades/entradas/: lembrete.py  perfil.py  registro.py
api/entidades/saidas/: lembrete.py  perfil.py  registro.py
api/rotas/: lembrete.py  perfil.py  registro.py
banco/: __init__.py
banco/repositorios/: __init__.py
banco/tabelas/: __init__.py  lembrete.py  perfil.py  registro.py
banco/triggers/: lembretes.py
servidor/: config.py
